--- a/css/style.css
+++ b/css/style.css
@@ -289,5 +289,53 @@ header {
 	border-radius: 100px;
 	padding: 15px 45px;
 
+}
 
+
+.help {
+	padding: 80px 0px 98px;
+}
+
+
+
+.help__title {
+	font-family: 'Georgia';
+	font-weight: 400;
+	font-size: 35px;
+	line-height: 130%;
+	letter-spacing: 0.06em;
+	text-align: center;
+	max-width: 320px;
+	color: #545454;
+	margin: 0 auto;
+	margin-bottom: 5px;
+}
+
+.help__body {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+
+
+
+}
+
+.help__items {
+
+	align-content: center;
+	margin: 55px 60px 0px;
+}
+
+.help__image {
+	text-align: center;
+}
+
+.help__actions {
+	font-family: 'Georgia';
+	font-weight: 400;
+	font-size: 20px;
+	line-height: 115%;
+	letter-spacing: 0.06em;
+	color: #545454;
+	text-align: center;
 }
