--- a/css/catalog-style.css
+++ b/css/catalog-style.css
@@ -1,15 +1,10 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
+/*------------------------------------- header ----------------------------*/
 
 header {
 	padding: 30px 0px;
-	position: relative;
+	position: static;
 }
 
-.header__logo {}
 
 .logo__title {
 	color: #545454;
@@ -19,21 +14,32 @@ header {
 	color: #292929;
 }
 
-.header__menu {}
+.first-line {
 
-.menu__list {}
+	background-color: #000000;
+}
+
+.second-line {
+
+	background-color: #000000;
+
+}
+
+.third-line {
+
+	background-color: #000000;
+
+}
 
 .menu__link a {
 	color: #545454;
 }
 
-.active a {
+.menu__link a:hover {
 	color: #292929;
 }
 
-
-
-
+/*------------------------------------------ friends -----------------------------------*/
 
 .friends {
 	padding: 80px 0px 100px;
@@ -47,14 +53,7 @@ header {
 .friends__block {
 	margin: 0px 0px 60px 0px;
 
-
-
-
-
-
 }
-
-
 
 .friends__body_items:not(:first-child) {
 	margin-left: 0px;
@@ -181,4 +180,59 @@ header {
 
 .buttons a {
 	text-decoration: none;
+}
+
+/*-------------------------------------------- media ---------------------------------*/
+
+@media(max-width:1100px) {
+	.friends__body_items:last-child {
+		display: block;
+	}
+}
+
+@media(max-width:600px) {
+	.friends__body_items:first-child {
+		display: block;
+	}
+}
+
+@media(max-width:940px) {
+	.friends__body__button {
+		padding: 15px 30px;
+		font-size: 14px;
+	}
+}
+
+@media(max-width:780px) {
+	.friends {
+		padding: 70px 0px 76px;
+	}
+
+	.friends__title {
+		margin-bottom: 10px;
+	}
+
+	.friends__first-row {
+		flex-wrap: wrap;
+		justify-content: space-around;
+		margin-top: 0px;
+	}
+
+	.friends__block .friends__first-row .friends__body_items {
+		margin-left: 0px;
+		margin-top: 30px;
+	}
+
+	.friends__second-row {
+		flex-wrap: wrap;
+		justify-content: space-around;
+		margin-top: 0px;
+	}
+
+	.friends__block .friends__second-row .friends__body_items {
+		margin-left: 0px;
+		margin-top: 30px;
+	}
+
+
 }
